# eis-pem-identification

./: .gitignore  ALL_PARAMETERS.md  BENCHMARK.md  DETAILED_PARAMETER_COMPARISON.md  Input_Spectra_25Conditions.csv  PRESENTATION_POINTS.md  PR_DESCRIPTION.md  README.md  eis_pem_cli.py  eis_pem_gui.py  pyproject.toml
examples/: ablation_full_cell_vs_decoupled.py  benchmark_accuracy_vs_pybop.py  benchmark_high_dim_vs_pybop.py  high_frequency_truncation_study.py  robust_selection_stability_study.py  run_all_seis_parameters_pem.py  run_benchmark_vs_pybop.py  run_frontend_dfn_adapter.py  run_joint_all_seis_parameters_pem.py  run_model_selection.py  run_robust_all_seis_parameters_pem.py  run_robust_real_data.py  run_synthetic_eis_pem.py  run_synthetic_seis_pem.py  test_model_mismatch.py  validate_parameter_recovery_vs_pybop.py
src/eis_pem/: __init__.py  costs.py  data_quality.py  dataset.py  diagnostics.py  drt.py  ecm_library.py  forward_models.py  frequency_filter.py  frontend.py  measurements.py  model_selection.py  optimizers.py  parameters.py  physics_priors.py  plotting.py  results.py  robust.py  seis_model.py
tests/: test_all_seis_parameters.py  test_cost.py  test_data_quality.py  test_decoupled_seis_model.py  test_drt.py  test_ecm_library.py  test_forward_model.py  test_frequency_filter.py  test_frontend_dfn_adapter.py  test_joint_all_parameter_identification.py  test_least_squares_optimizer.py  test_model_selection.py  test_physics_priors.py  test_recovery.py  test_robust_selection.py  test_seis_model.py
